--- a/CineElorrietaMVC/.classpath
+++ b/CineElorrietaMVC/.classpath
@@ -19,5 +19,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
+	<classpathentry kind="lib" path="mysql-connector-java-8.0.23.jar"/>
 	<classpathentry kind="output" path="bin/default"/>
 </classpath>
