--- a/CineElorrietaMVC/bin/main/.gitignore
+++ b/CineElorrietaMVC/bin/main/.gitignore
@@ -1,9 +1,3 @@
-<<<<<<< HEAD
-/Modelo/
-/Vista/
-/Controlador/
-=======
+/App/
 /Controlador/
 /Modelo/
-/Vista/
->>>>>>> 5c539ec98af3a49e780cc752ff3ff03612f16fdd
